# vsqlite_serialize

./: CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  benchmain.cpp
include/: vsqlite_serialize.h
src/: CMakeLists.txt  crow_serializer.cpp  json_serializer.cpp  json_stringmap_serializer.cpp  osquery_json_serializer.cpp  utils.cpp  utils.h
tests/: CMakeLists.txt  misc.cpp  test_crow.cpp  test_json.cpp  test_osquery_json.cpp  test_stringmap_json.cpp
